[project]
name = "simulation-systems"
version = "0.1.0"
description = "Simulation Systems Working Practices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydata-sphinx-theme==0.16.1",
    "sphinx==8.2.3",
    "sphinx-design==0.6.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-lint==1.0.0",
    "sphinx-sitemap==2.8.0",
    "sphinxcontrib-svg2pdfconverter==1.3.0",
]
